--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -16,10 +16,10 @@
       </div>
       <div class="col-md-2 col-sm-12 actionButton">
         <div class="mb-1 mt-1">
-          <button class="newBillButton button" mat-button (click)="openDialogEditProfile()">Edit profile</button>
+          <button type="button" mat-raised-button color="primary" class="btn-block newBillButton button" (click)="openDialogEditProfile()">Edit profile</button>
         </div>
         <div class="mb-1">
-          <button class="newBillButton button mb-1" mat-button (click)="openDialogChangePassword()">Change password</button>
+          <button type="button" mat-raised-button color="primary" class="btn-block newBillButton button mb-1" (click)="openDialogChangePassword()">Change password</button>
         </div>
       </div>
     </div>
