--- a/src/custom.scss
+++ b/src/custom.scss
@@ -156,3 +156,11 @@ $colums: 12;
 .max-height-500 {
   max-height: 500px;
 }
+
+.border {
+  border: 1px solid black;
+}
+
+.decorationText {
+  text-decoration: underline;
+}
