--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -1,18 +1,19 @@
 <div class="bills p-2" *ngIf="!newBillState">
   <div class="row">
     <!--h1>Costs</h1-->
-    <div class="col-md-2 col-sm-12">
+    <div class="col-md-2 col-sm-12 p-1">
       <h1 class="m-auto" *ngIf="buttonSwitchMessage != 'Switch to costs!'"><i class="material-icons">money_off</i> Costs
       </h1>
       <h1 class="m-auto" *ngIf="buttonSwitchMessage === 'Switch to costs!'"><i class="material-icons">attach_money</i>Profits
       </h1>
     </div>
     <div class="col-md-2 col-sm-12 actionButton">
-      <div class="m-auto p-relative">
-        <button mat-button (click)="changeBills(categoryId, subCategoryId, currencyId)"
+      <div class="m-auto p-relative p-1">
+        <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="changeBills(categoryId, subCategoryId, currencyId)"
                 matTooltip="{{buttonSwitchMessage}}"><i class="material-icons">swap_vert</i></button>
-        <div class="info p-absolute" mat-button  matTooltip="This button will change type of bills,
-        you can see profits or costs using switching."><i class="material-icons">info</i></div>
+        <!--div class="info p-absolute" mat-button  matTooltip="This button will change type of bills,
+        you can see profits or costs using switching."><i class="material-icons">info</i></div-->
+
         <!--button class="info" mat-button matTooltip="This button will change type of bills,
         you can see profits or costs using switching."><i class="material-icons">info</i></button-->
       </div>
@@ -49,12 +50,13 @@
     </div>
 
     <div class="col-md-2 col-sm-12 actionButton">
-      <div class="m-auto p-relative">
-        <button class="pdfReport" mat-button (click)="printReport(categoryId, subCategoryId, currencyId)"><i
+      <div class="m-auto p-relative p-1">
+        <button type="button" mat-raised-button color="warn" class="btn-block pdfReport" (click)="printReport(categoryId, subCategoryId, currencyId)"><i
               class="material-icons">picture_as_pdf</i></button>
-            <div class="info p-absolute" mat-button matTooltip="This button will print bill report,
+            <!--div class="info p-absolute" mat-button matTooltip="This button will print bill report,
             in user options you can set additional options as print both type, sort by date, sort by max price etc."><i
-              class="material-icons">info</i></div>
+              class="material-icons">info</i></div-->
+
         <!--button class="info" mat-button matTooltip="This button will change type of bills,
         you can see profits or costs using switching."><i class="material-icons">info</i></button-->
       </div>
@@ -63,10 +65,10 @@
   </div>
 
 
-  <div class="filters">
+  <div class="filters p-1">
     <h3>Filter by</h3>
   </div>
-  <div class="filters">
+  <div class="filters p-1">
     <div class="row">
       <div class="col-md-4 col-sm-12">
         <mat-form-field>
@@ -194,8 +196,8 @@
   </div>
   <div class="newBill row mt-2">
     <div class="col-md-10"></div>
-    <div class="col-md-2 col-sm-12 text-right">
-      <button class="newBillButton" mat-button (click)="openDialogNewBill(true)">New bill</button>
+    <div class="col-md-2 col-sm-12 text-right p-1">
+      <button type="button" mat-raised-button color="primary" class="btn-block newBillButton" (click)="openDialogNewBill(true)">New bill</button>
     </div>
   </div>
 </div>
