--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -15,14 +15,31 @@ mat-form-field {
     border: unset;
     border-radius: unset;
     box-shadow: unset;
+    transform: unset;
+    left: 0;
+    top: 0;
+    margin-top: 50%;
+    padding: 0;
   }
 }
 
 @media (max-width: 767px) {
   .login {
       width: 90%;
+      margin-left: 5%;
+      margin-right: 5%;;
       button {
           width: 100%;
       }
+  }
+}
+
+.howApplicationWorks {
+  height: 100%;
+  position: relative;
+  z-index: 99999 !important;
+  background: lightblue;
+  p {
+    text-align: justify;
   }
 }
