--- a/src/app/profile/edit_profile.html
+++ b/src/app/profile/edit_profile.html
@@ -9,9 +9,9 @@
     <input type="text" matInput required [(ngModel)]="dataEdit.lastName">
   </mat-form-field>
   <mat-form-field class="w-100">
-    <input matInput [matDatepicker]="picker" [(ngModel)]="dataEdit.birthDate" placeholder="Birth date" required>
+    <input matInput [matDatepicker]="picker" [(ngModel)]="dataEdit.birthDate" placeholder="Birth date" required disabled>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-    <mat-datepicker touchUi #picker></mat-datepicker>
+    <mat-datepicker touchUi #picker disabled="false"></mat-datepicker>
   </mat-form-field>
   <!--mat-form-field class="w-100">
     <mat-label>Country</mat-label>
@@ -65,9 +65,9 @@
 </div>
 <div mat-dialog-actions class="w-100">
   <div class="w-50 m-auto text-center">
-    <button mat-button class="w-90" (click)="onNoClick()">No Thanks</button>
+    <button type="button" mat-raised-button class="btn-block w-90" (click)="onNoClick()">No Thanks</button>
   </div>
   <div class="w-50 m-auto text-center">
-    <button mat-button class="w-90" [mat-dialog-close]="data" (click)="editProfile(dataEdit)">Save</button>
+    <button type="button" mat-raised-button color="primary" class="btn-block w-90" [mat-dialog-close]="data" (click)="editProfile(dataEdit)">Save</button>
   </div>
 </div>
