--- a/src/app/bills/bills.component.html
+++ b/src/app/bills/bills.component.html
@@ -71,7 +71,7 @@
   <div class="filters p-1">
     <div class="row">
       <div class="col-md-4 col-sm-12">
-        <mat-form-field>
+        <mat-form-field class="desktopVersion">
           <mat-label>Category</mat-label>
           <mat-select (selectionChange)="onChange($event, 'categoryId')">
             <mat-option value=null>
@@ -84,7 +84,7 @@
         </mat-form-field>
       </div>
       <div class="col-md-4 col-sm-12">
-        <mat-form-field>
+        <mat-form-field class="desktopVersion">
           <mat-label>Sub category</mat-label>
           <mat-select (selectionChange)="onChange($event, 'subCategoryId')">
             <mat-option value="null">
@@ -97,7 +97,7 @@
         </mat-form-field>
       </div>
       <div class="col-md-4 col-sm-12">
-        <mat-form-field>
+        <mat-form-field class="w-100">
           <mat-label>Currency</mat-label>
           <mat-select (selectionChange)="onChange($event, 'currencyId')">
             <mat-option value="null">
@@ -108,6 +108,19 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
+      </div>
+      <div class="col-md-12 col-sm-12 search">
+          <div>
+            <form class="example-form">
+              <mat-form-field class="w-100">
+                <input matInput placeholder="Search by title" [formControl]="searchField">
+                <mat-icon matPrefix>search</mat-icon>
+              </mat-form-field>
+            </form>
+            <!--div class="searchIcon"><i class="material-icons">search</i></div>
+            <div class="searchInput"><input type="text" placeholder="Search"></div-->
+          </div>
+          <div></div>
       </div>
       <div class="col-md-12" *ngIf="bills$.length > 0">
         <h4>Results</h4>
