--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -3,6 +3,18 @@
 </div-->
 
 <div class="mobileGraph">
+  <div class="row pr-3 pl-3 mt-1">
+    <div class="col-md-12 col-sm-12">
+      <mat-form-field class="w-100">
+        <mat-label>Currency</mat-label>
+        <mat-select (selectionChange)="onChange($event)">
+          <mat-option *ngFor="let currency of currencies$" [value]="currency.id">
+            <p>{{ currency.code }}</p>
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div>
+  </div>
   <fusioncharts *ngIf="bills"
   [type]="type"
   [width]="width"
