--- a/src/app/bills/new-bill.component.html
+++ b/src/app/bills/new-bill.component.html
@@ -38,7 +38,7 @@
 
   <mat-form-field class="w-100">
     <mat-label>Currency</mat-label>
-    <mat-select [(ngModel)]="data.currencyId">
+    <mat-select [(ngModel)]="data.currencyId" required>
       <mat-option value="null">
         <p>None</p>
       </mat-option>
