--- a/src/app/bills/show-bill.component.html
+++ b/src/app/bills/show-bill.component.html
@@ -51,7 +51,7 @@
 
   <mat-form-field class="w-100">
     <mat-label>Currency</mat-label>
-    <mat-select [(ngModel)]="data.currencyId" disabled>
+    <mat-select [(ngModel)]="data.currencyId" required disabled>
       <mat-option value="null">
         <p>None</p>
       </mat-option>
