--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -43,3 +43,11 @@ mat-form-field {
     text-align: justify;
   }
 }
+
+.languageChoice {
+  position: absolute;
+  bottom: 0px;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+}
