--- a/src/app/profile/change_password.html
+++ b/src/app/profile/change_password.html
@@ -1,23 +1,23 @@
 <div mat-dialog-content class="text-center">
-  <p>Change password</p>
+  <p>{{ _translation('Change password', langCode) }}</p>
   <mat-form-field>
-    <mat-label>Current password</mat-label>
+    <mat-label>{{ _translation('Current password', langCode) }}</mat-label>
     <input type="password" matInput required name="currentPassword" [(ngModel)]="data.currentPassword">
   </mat-form-field>
   <mat-form-field>
-    <mat-label>New password</mat-label>
+    <mat-label>{{ _translation('New password', langCode) }}</mat-label>
     <input type="password" matInput required name="newPassword" [(ngModel)]="data.newPassword">
   </mat-form-field>
   <mat-form-field>
-    <mat-label>Confirm password</mat-label>
+    <mat-label>{{ _translation('Confirm password', langCode) }}</mat-label>
     <input type="password" matInput required name="confirmPassword" [(ngModel)]="data.confirmPassword">
   </mat-form-field>
 </div>
 <div mat-dialog-actions class="w-100">
   <div class="w-50 m-auto text-center">
-    <button type="button" mat-raised-button class="btn-block w-90" cdkFocusInitial (click)="onNoClick()">No Thanks</button>
+    <button type="button" mat-raised-button class="btn-block w-90" cdkFocusInitial (click)="onNoClick()">{{ _translation('No Thanks', langCode) }}</button>
   </div>
   <div class="w-50 m-auto text-center">
-    <button type="button" mat-raised-button color="primary" class="btn-block w-90" (click)="changePassword(data)">Change</button>
+    <button type="button" mat-raised-button color="primary" class="btn-block w-90" (click)="changePassword(data)">{{ _translation('Change', langCode) }}</button>
   </div>
 </div>
