--- a/src/app/restart-password/restart-password.component.html
+++ b/src/app/restart-password/restart-password.component.html
@@ -3,13 +3,13 @@
     <p class="error_message" *ngIf="error_message">{{error_message}}</p>
     <div>
       <mat-form-field class="w-100">
-        <mat-label>Enter your email</mat-label>
+        <mat-label>{{ _translation('Enter your email', langCode) }}</mat-label>
         <input type="email" matInput required name="email" [(ngModel)]="email">
         <mat-icon matSuffix>email</mat-icon>
       </mat-form-field>
     </div>
     <div class="text-center">
-      <button type="submit" mat-raised-button color="primary" class="btn-block">Send activation key</button>
+      <button type="submit" mat-raised-button color="primary" class="btn-block">{{ _translation('Send activation key', langCode) }}</button>
     </div>
   </form>
 
@@ -17,19 +17,19 @@
     <div>
       <p class="error_message" *ngIf="error_message">{{error_message}}</p>
       <mat-form-field class="w-100">
-        <mat-label>Enter activation code</mat-label>
+        <mat-label>{{ _translation('Enter activation code', langCode) }}</mat-label>
         <input type="text" matInput required name="code" [(ngModel)]="code">
         <mat-icon matSuffix>vpn_key</mat-icon>
       </mat-form-field>
     </div>
     <div class="text-center mb-1">
-      <button type="submit" mat-raised-button color="primary" class="btn-block">Activate</button>
+      <button type="submit" mat-raised-button color="primary" class="btn-block">{{ _translation('Activate', langCode) }}</button>
     </div>
     <div class="text-center mb-1">
-      <p>If you didn't get restart password activation key please resend code again!</p>
+      <p>{{ _translation('If you didn\'t get restart password activation key please resend code again!', langCode) }}</p>
     </div>
     <div class="text-center">
-      <button type="button" mat-raised-button color="primary" class="btn-block" (click)="restartPassword(email)">Resend code</button>
+      <button type="button" mat-raised-button color="primary" class="btn-block" (click)="restartPassword(email)">{{ _translation('Resend code', langCode) }}</button>
     </div>
   </form>
 
@@ -37,18 +37,18 @@
     <p class="error_message" *ngIf="error_message">{{error_message}}</p>
     <div>
       <mat-form-field class="w-100">
-        <mat-label>Enter new password</mat-label>
+        <mat-label>{{ _translation('Enter new password', langCode) }}</mat-label>
         <input type="password" matInput required name="newPassword" [(ngModel)]="newPassword">
         <mat-icon matSuffix>lock</mat-icon>
       </mat-form-field>
       <mat-form-field class="w-100">
-        <mat-label>Confirm new password</mat-label>
+        <mat-label>{{ _translation('Confirm new password', langCode) }}</mat-label>
         <input type="password" matInput required name="newPassword" [(ngModel)]="confirmPassword">
         <mat-icon matSuffix>lock</mat-icon>
       </mat-form-field>
     </div>
     <div class="text-center mb-1">
-      <button type="submit" mat-raised-button color="primary" class="btn-block">Save new password</button>
+      <button type="submit" mat-raised-button color="primary" class="btn-block">{{ _translation('Save new password', langCode) }}</button>
     </div>
   </form>
 </div>
