--- a/src/app/profile/edit_profile.html
+++ b/src/app/profile/edit_profile.html
@@ -1,15 +1,15 @@
 <div mat-dialog-content class="text-center max-height-500">
-  <p>Edit your personal information</p>
+  <p>{{ _translation('Edit your personal information', langCode) }}</p>
   <mat-form-field class="w-100">
-    <mat-label>First name</mat-label>
+    <mat-label>{{ _translation('First name', langCode) }}</mat-label>
     <input type="text" matInput required [(ngModel)]="dataEdit.firstName">
   </mat-form-field>
   <mat-form-field class="w-100">
-    <mat-label>Last name</mat-label>
+    <mat-label>{{ _translation('Last name', langCode) }}</mat-label>
     <input type="text" matInput required [(ngModel)]="dataEdit.lastName">
   </mat-form-field>
   <mat-form-field class="w-100">
-    <input matInput [matDatepicker]="picker" [(ngModel)]="dataEdit.birthDate" placeholder="Birth date" required disabled>
+    <input matInput [matDatepicker]="picker" [(ngModel)]="dataEdit.birthDate" placeholder="{{ _translation('Birth date', langCode) }}" required disabled>
     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
     <mat-datepicker touchUi #picker disabled="false"></mat-datepicker>
   </mat-form-field>
@@ -30,32 +30,32 @@
     </mat-select>
   </mat-form-field-->
   <mat-form-field class="w-100">
-    <mat-label>Address</mat-label>
+    <mat-label>{{ _translation('Address', langCode) }}</mat-label>
     <input type="text" matInput required [(ngModel)]="dataEdit.address">
   </mat-form-field>
   <mat-form-field class="w-100">
-    <mat-label>Email</mat-label>
+    <mat-label>{{ _translation('Email', langCode) }}</mat-label>
     <input type="email" matInput required [(ngModel)]="dataEdit.email">
   </mat-form-field>
   <mat-form-field class="w-100">
-    <mat-label>Phone</mat-label>
+    <mat-label>{{ _translation('Phone', langCode) }}</mat-label>
     <input type="text" matInput [(ngModel)]="dataEdit.phone">
   </mat-form-field>
   <mat-radio-group aria-label="Select an option" required [(ngModel)]="dataEdit.gender" class="w-100">
     <div class="row">
       <div class="col-md-6">
-        <mat-radio-button value="male" class="mb-1">Male</mat-radio-button>
+        <mat-radio-button value="male" class="mb-1">{{ _translation('Male', langCode) }}</mat-radio-button>
       </div>
       <div class="col-md-6">
-        <mat-radio-button value="female" class="mb-1">Female</mat-radio-button>
+        <mat-radio-button value="female" class="mb-1">{{ _translation('Female', langCode) }}</mat-radio-button>
       </div>
     </div>
   </mat-radio-group>
   <mat-form-field class="w-100">
-    <mat-label>Default currency</mat-label>
+    <mat-label>{{ _translation('Default currency', langCode) }}</mat-label>
     <mat-select name="currency_id" [(ngModel)]="dataEdit.currency_id">
       <mat-option value="null">
-        <p>None</p>
+        <p></p>
       </mat-option>
       <mat-option *ngFor="let currency of dataEdit.currencies$" [value]="currency.id">
         {{currency.code}}
@@ -65,9 +65,9 @@
 </div>
 <div mat-dialog-actions class="w-100">
   <div class="w-50 m-auto text-center">
-    <button type="button" mat-raised-button class="btn-block w-90" (click)="onNoClick()">No Thanks</button>
+    <button type="button" mat-raised-button class="btn-block w-90" (click)="onNoClick()">{{ _translation('No Thanks', langCode) }}</button>
   </div>
   <div class="w-50 m-auto text-center">
-    <button type="button" mat-raised-button color="primary" class="btn-block w-90" [mat-dialog-close]="data" (click)="editProfile(dataEdit)">Save</button>
+    <button type="button" mat-raised-button color="primary" class="btn-block w-90" [mat-dialog-close]="data" (click)="editProfile(dataEdit)">{{ _translation('Save', langCode) }}</button>
   </div>
 </div>
