--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -3,10 +3,10 @@
       [attr.role]="(isHandset$ | async) ? 'dialog' : 'navigation'"
       [mode]="(isHandset$ | async) ? 'over' : 'side'"
       [opened]="!(isHandset$ | async)">
-    <mat-toolbar color="primary" routerLink="/dashboard" class="app">E-Wallet</mat-toolbar>
+    <mat-toolbar color="primary" routerLink="/dashboard" class="app" (click)="closeMenu(null, drawer)">E-Wallet</mat-toolbar>
       <!--mat-sidenav #appDrawer mode="over" opened="false"-->
         <mat-nav-list>
-          <app-menu-list-item *ngFor="let item of navItems" [item]="item" [routerLink]="[item.route]"></app-menu-list-item>
+          <app-menu-list-item *ngFor="let item of navItems" [item]="item" [routerLink]="[item.route]" (click)="closeMenu(item.displayName, drawer)"></app-menu-list-item>
         </mat-nav-list>
         <div class="text-center logout p-1">
           <button type="submit" mat-raised-button color="primary" class="btn-block" (click)="logout()">{{ _translation('Logout', langCode) }}</button>
@@ -16,6 +16,7 @@
       <mat-sidenav-content>
           <mat-toolbar color="primary">
             <button
+              id="menuButton"
               type="button"
               aria-label="Toggle sidenav"
               mat-icon-button
