--- a/src/app/graph/graph.component.html
+++ b/src/app/graph/graph.component.html
@@ -2,27 +2,47 @@
   <canvas id="canvas" width="500px" height="200px">{{ chart }}</canvas>
 </div-->
 
-<div class="mobileGraph">
-  <div class="row pr-3 pl-3 mt-1">
+<div>
+  <div class="row pr-1 pl-1 mt-1">
     <div class="col-md-12 col-sm-12">
       <mat-form-field class="w-100">
         <mat-label>Currency</mat-label>
-        <mat-select (selectionChange)="onChange($event)">
+        <mat-select (selectionChange)="onChange($event, 'currencyId')">
           <mat-option *ngFor="let currency of currencies$" [value]="currency.id">
             <p>{{ currency.code }}</p>
           </mat-option>
         </mat-select>
       </mat-form-field>
     </div>
+    <div class="col-md-5 col-sm-9">
+      <mat-form-field class="w-100">
+        <input matInput [matDatepicker]="pickerFrom" [(ngModel)]="dateFrom" placeholder="Date from" disabled
+               (dateChange)="onChange($event, 'dateFrom')">
+        <mat-datepicker-toggle matSuffix [for]="pickerFrom"></mat-datepicker-toggle>
+        <mat-datepicker touchUi #pickerFrom disabled="false"></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <div class="col-md-1 col-sm-3">
+      <div class="text-right p-1">
+        <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateFrom()">Clear
+        </button>
+      </div>
+    </div>
+    <div class="col-md-5 col-sm-9">
+      <mat-form-field class="w-100">
+        <input matInput [matDatepicker]="pickerTo" [(ngModel)]="dateTo" placeholder="Date to" disabled
+               (dateChange)="onChange($event, 'dateTo')">
+        <mat-datepicker-toggle matSuffix [for]="pickerTo"></mat-datepicker-toggle>
+        <mat-datepicker touchUi #pickerTo disabled="false"></mat-datepicker>
+      </mat-form-field>
+    </div>
+    <div class="col-md-1 col-sm-3">
+      <div class="text-right p-1">
+        <button type="button" mat-raised-button color="primary" class="btn-block" (click)="clearDateTo()">Clear</button>
+      </div>
+    </div>
   </div>
-  <fusioncharts *ngIf="bills"
-  [type]="type"
-  [width]="width"
-  [height]="height"
-  [dataSource]="dataSource"
-  >
-  </fusioncharts>
-  <div class="row pr-3 pl-3">
+  <div class="row pr-1 pl-1" *ngIf="bills">
     <div class="col-md-3 col-sm-12">
       <p>Min cost: {{bills?.min_cost}}</p>
     </div>
@@ -36,5 +56,48 @@
       <p>Max profit: {{bills?.max_profit}}</p>
     </div>
   </div>
+</div>
+<div class="mobileGraph">
+  <fusioncharts *ngIf="bills"
+                [type]="type"
+                [width]="width"
+                [height]="height"
+                [dataSource]="dataSource"
+  >
+  </fusioncharts>
+</div>
+<div>
+  <fusioncharts *ngIf="bills && dataCostCategoryPie.length > 0"
+                [width]="width"
+                [height]="height"
+                [type]="typePie"
+                [dataFormat]="pieFormat"
+                [dataSource]="pieDataCategoryCost"
+  >
+  </fusioncharts>
+  <fusioncharts *ngIf="bills && dataProfitCategoryPie.length > 0"
+                [width]="width"
+                [height]="height"
+                [type]="typePie"
+                [dataFormat]="pieFormat"
+                [dataSource]="pieDataCategoryProfit"
+  >
+  </fusioncharts>
+  <fusioncharts *ngIf="bills && dataCostSubCategoryPie.length > 0"
+                [width]="width"
+                [height]="height"
+                [type]="typePie"
+                [dataFormat]="pieFormat"
+                [dataSource]="pieDataSubCategoryCost"
+  >
+  </fusioncharts>
+  <fusioncharts *ngIf="bills && dataProfitSubCategoryPie.length > 0"
+                [width]="width"
+                [height]="height"
+                [type]="typePie"
+                [dataFormat]="pieFormat"
+                [dataSource]="pieDataSubCategoryProfit"
+  >
+  </fusioncharts>
 </div>
 
