--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,10 +1,20 @@
 <div class="row" xmlns="http://www.w3.org/1999/html">
+  <div class="col-md-1 col-sm-12 p-1">
+    <mat-form-field class="w-90">
+      <mat-label>{{ _translation('Language', langCode) }}</mat-label>
+      <mat-select (selectionChange)="changeLang($event, null)" [(ngModel)]="langCode">
+        <mat-option *ngFor="let language of languages" [value]="language.langCode">
+          <p>{{ language.language }}</p>
+        </mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
   <div class="col-md-1 col-sm-12">
     <div class="text-center m-1">
       <button mat-raised-button color="primary" class="btn-block" (click)="toogleShow()">How application works</button>
     </div>
   </div>
-  <div class="col-md-11 col-sm-0"></div>
+  <div class="col-md-10 col-sm-0"></div>
 </div>
 <div class="row">
   <div class="col-md-12 col-sm-12">
@@ -96,21 +106,4 @@
       <p class="m-2"><a routerLink="/restartPassword">{{ _translation('Forgot your password', langCode) }}</a></p>
     </div>
   </form>
-</div>
-
-<div class="row languageChoice" *ngIf="userActive">
-  <div class="col-md-5 col-sm-0">
-  </div>
-  <div class="col-md-2 col-sm-12">
-    <mat-form-field class="w-100">
-      <mat-label>{{ _translation('Language', langCode) }}</mat-label>
-      <mat-select (selectionChange)="changeLang($event)" [(ngModel)]="langCode">
-        <mat-option *ngFor="let language of languages" [value]="language.langCode">
-          <p>{{ language.language }}</p>
-        </mat-option>
-      </mat-select>
-    </mat-form-field>
-  </div>
-  <div class="col-md-5 col-sm-0">
-  </div>
 </div>
