--- a/src/app/profile/edit_profile.html
+++ b/src/app/profile/edit_profile.html
@@ -44,10 +44,10 @@
   <mat-radio-group aria-label="Select an option" required [(ngModel)]="dataEdit.gender" class="w-100">
     <div class="row">
       <div class="col-md-6">
-        <mat-radio-button value="male" class="mb-1">{{ _translation('Male', langCode) }}</mat-radio-button>
+        <mat-radio-button value="Male" class="mb-1">{{ _translation('Male', langCode) }}</mat-radio-button>
       </div>
       <div class="col-md-6">
-        <mat-radio-button value="female" class="mb-1">{{ _translation('Female', langCode) }}</mat-radio-button>
+        <mat-radio-button value="Female" class="mb-1">{{ _translation('Female', langCode) }}</mat-radio-button>
       </div>
     </div>
   </mat-radio-group>
