--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -66,10 +66,10 @@
           <mat-radio-group aria-label="Select an option" required name="gender" [(ngModel)]="regRequest.gender">
             <div class="row">
               <div class="col-md-6">
-                <mat-radio-button value="male" class="mb-1">{{ _translation('Male', langCode) }}</mat-radio-button>
+                <mat-radio-button value="Male" class="mb-1">{{ _translation('Male', langCode) }}</mat-radio-button>
               </div>
               <div class="col-md-6">
-                <mat-radio-button value="female" class="mb-1">{{ _translation('Female', langCode) }}</mat-radio-button>
+                <mat-radio-button value="Female" class="mb-1">{{ _translation('Female', langCode) }}</mat-radio-button>
               </div>
             </div>
           </mat-radio-group>
